--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "zorbit-wallet",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-electron": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
+    "electron-start": "ng build --deploy-url=Git/zorbit-wallet/dist/ && npm run build-electron && electron ./dist --serve",
+    "electron": "electron .",
+    "electron-build": "ng build --prod"
   },
+  "productName": "Zorbit Wallet",
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "0.4.0",
@@ -24,10 +30,16 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
+    "@zorbtech/zorbit-api-test": "0.0.2",
     "core-js": "2.4.1",
     "ngx-clipboard": "9.0.0",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.19"
+    "zone.js": "0.8.19",
+    "devtron": "1.3.0",
+    "electron": "1.8.2",
+    "electron-winstaller": "2.2.0",
+    "electron-reload": "1.2.2",
+    "electron-context-menu": "0.9.1"
   },
   "devDependencies": {
     "@angular/cli": "1.6.0",
@@ -37,6 +49,8 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
+    "copyfiles": "1.2.0",
+    "electron-packager": "^8.6.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
