--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-electron": "tsc main.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
-    "electron-start": "ng build --deploy-url=Git/zorbit-wallet/dist/ && npm run build-electron && electron ./dist --serve",
     "electron": "electron .",
-    "electron-build": "ng build --prod"
+    "electron-build": "ng build --prod --base-href=./",
+    "electron-start": "npm run electron-build && npm run electron"
   },
   "productName": "Zorbit Wallet",
   "private": true,
@@ -36,7 +35,7 @@
     "rxjs": "5.5.6",
     "zone.js": "0.8.19",
     "devtron": "1.3.0",
-    "electron": "1.8.2",
+    "electron": "1.8.3",
     "electron-winstaller": "2.2.0",
     "electron-reload": "1.2.2",
     "electron-context-menu": "0.9.1"
