--- a/package.json
+++ b/package.json
@@ -33,12 +33,7 @@
     "core-js": "2.4.1",
     "ngx-clipboard": "9.0.0",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.19",
-    "devtron": "1.3.0",
-    "electron": "1.8.3",
-    "electron-winstaller": "2.2.0",
-    "electron-reload": "1.2.2",
-    "electron-context-menu": "0.9.1"
+    "zone.js": "0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.0",
@@ -49,7 +44,12 @@
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
     "copyfiles": "1.2.0",
-    "electron-packager": "^8.6.0",
+    "devtron": "1.3.0",
+    "electron": "1.8.4",
+    "electron-winstaller": "2.2.0",
+    "electron-reload": "1.2.2",
+    "electron-context-menu": "0.9.1",
+    "electron-packager": "8.6.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
